// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateLetterOfCredit matches snapshot 1`] = `
<DocumentFragment>
  <div
    style="padding: 16px; margin: 0px; max-height: 78px;"
  >
    <div
      style="font-size: 1.28571429rem; padding-bottom: 8px;"
    >
      Standby Letter of Credit Application
    </div>
    <div
      style="color: rgb(93, 118, 143);"
    >
      Template: FakeTemplate
    </div>
  </div>
  .c7 {
  width: 100%;
  padding: 8px;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
}

.c8 {
  margin-left: auto;
}

.c9 {
  margin-top: 2px;
  padding: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #c0cfde;
  background-color: white;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
  height: 100%;
  width: 100%;
}

.c4 {
  font-size: small;
  color: #d45c64;
  margin-top: -1em;
  padding-top: 3px;
  min-height: 22px;
  margin-bottom: 9px;
}

.c0 {
  margin-top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
  width: 100%;
  border-top: 1px solid #c0cfde;
  background-color: #f2f5f8;
}

.c1 {
  width: 100%;
  background-color: #f2f5f8;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
}

.c2 {
  padding: 16px;
  overflow: auto;
  height: 100%;
  background-color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #c0cfde;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  background-color: #f2f5f8;
}

.c3.c3.c3.c3 {
  border: 0;
  padding: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3.c3.c3.c3:hover,
.c3.c3.c3.c3:active,
.c3.c3.c3.c3:visited,
.c3.c3.c3.c3:focus {
  box-shadow: none !important;
}

@media (min-width:68.75em) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    height: 100%;
    overflow: none;
  }
}

@media (min-width:68.75em) {
  .c1 {
    padding: 16px 0 16px 16px;
    -webkit-scroll-behavior: smooth;
    -moz-scroll-behavior: smooth;
    -ms-scroll-behavior: smooth;
    scroll-behavior: smooth;
    height: calc(100vh - 80px);
    margin: 0;
    box-shadow: none;
    width: 400px;
    max-width: 400px;
    min-width: 400px;
  }
}

@media (min-width:68.75em) {
  .c5 {
    max-width: 990px;
    margin-left: auto;
    margin-right: auto;
    padding: 16px;
    height: calc(100vh - 80px);
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          style="display: flex; justify-content: space-between; padding-top: 0px; padding-bottom: 16px;"
        >
          <div
            class="ui header"
          >
            Apply for SBLC
          </div>
          <a
            class="c3"
            href="/trades/123?hideDeleteButton=true&hideApplyButtons=true"
            target="_blank"
          >
            View trade details
          </a>
        </div>
        <form
          class="ui form"
          id="create-standby-letter-of-credit"
          style="display: flex; flex-direction: column; flex-grow: 1;"
        >
          <div
            class="field"
          >
            <label
              class="inputLabel"
            >
              Issuing bank
            </label>
            <div
              aria-expanded="false"
              class="ui compact search selection dropdown dropdown-input"
              data-test-id="issuingBankId"
              name="issuingBank.staticId"
              role="combobox"
              style="width: 100%;"
            >
              <input
                aria-autocomplete="list"
                autocomplete="off"
                class="search"
                id="field_issuingBank.staticId"
                tabindex="1"
                type="text"
                value=""
              />
              <div
                aria-live="polite"
                class="text"
                role="alert"
              />
              <i
                aria-hidden="true"
                class="dropdown icon"
              />
              <div
                class="menu transition"
                role="listbox"
              >
                <div
                  aria-checked="false"
                  aria-selected="true"
                  class="selected item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Bank 1
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Bank 2
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Bank 3
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c4"
            data-test-id="issuingBank.staticId-error"
          />
          <div
            class="field"
          >
            <label
              class="inputLabel"
            >
              Advising bank
            </label>
            <div
              aria-disabled="true"
              aria-expanded="false"
              class="ui disabled compact selection dropdown field disabled dropdown-input"
              name="beneficiaryBank.staticId"
              role="listbox"
              style="width: 100%;"
              tabindex="-1"
            >
              <div
                aria-live="polite"
                class="default text"
                role="alert"
              >
                No advising bank
              </div>
              <i
                aria-hidden="true"
                class="dropdown icon"
              />
              <div
                class="menu transition"
              >
                <div
                  aria-checked="false"
                  aria-selected="true"
                  class="selected item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    No advising bank
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c4"
            data-test-id="beneficiaryBank.staticId-error"
          />
          <div
            class="field"
          >
            <label>
              Opening amount / Currency
            </label>
            <div
              class="ui right labeled input"
              data-test-id="amount"
            >
              <input
                id="field_amount"
                name="amount"
                tabindex="3"
                type="text"
                value="100.00"
              />
              <div
                aria-expanded="false"
                class="ui dropdown label"
                data-test-id="currency"
                name="currency"
                role="listbox"
                style="border: 1px solid rgb(226, 226, 226);"
                tabindex="0"
              >
                <div
                  aria-live="polite"
                  class="text"
                  role="alert"
                >
                  EUR
                </div>
                <i
                  aria-hidden="true"
                  class="dropdown icon"
                />
                <div
                  class="menu transition"
                >
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      AED
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      CHF
                    </span>
                  </div>
                  <div
                    aria-checked="true"
                    aria-selected="true"
                    class="active selected item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      EUR
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      GBP
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      JPY
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      USD
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c4"
            data-test-id="amount-error"
          />
          <div
            class="field"
          >
            <label>
              Expiry date
            </label>
            <div
              class="field"
              style="display: inherit; justify-content: unset; align-items: center;"
            >
              <label
                class="inputLabel"
              />
              <div
                class="ui input"
                data-test-id="expiryDate"
                style="width: 100%;"
              >
                <input
                  id="field_expiryDate"
                  min="2018-11-13"
                  name="expiryDate"
                  tabindex="4"
                  type="date"
                  value="Choose a valid expiry date"
                />
              </div>
            </div>
          </div>
          <div
            class="c4"
            data-test-id="expiryDate-error"
          />
          <button
            class="ui primary disabled button"
            data-test-id="submit-letter-of-credit-application"
            disabled=""
            role="button"
            style="width: 100%; margin-top: auto;"
            tabindex="-1"
            type="submit"
          >
            Submit Application
          </button>
        </form>
      </div>
    </div>
    <div
      class="c5"
      height="80px"
    >
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          <div
            style="padding-left: 16px; color: rgb(212, 92, 100);"
          >
            <i
              aria-hidden="true"
              class="red warning sign icon"
            />
            <span
              style="padding-left: 16px;"
            >
              The template is missing 8 mandatory fields. 
              <span
                data-test-id="resolve-missing-fields"
                style="color: rgb(212, 92, 100); text-decoration: underline; cursor: pointer;"
              >
                Resolve
              </span>
            </span>
          </div>
          <div
            class="c8"
          >
            <div
              style="display: flex; align-items: center;"
            >
              <div
                class="ui fitted toggle checkbox"
                data-test-id="button-mode"
              >
                <input
                  class="hidden"
                  readonly=""
                  tabindex="0"
                  type="checkbox"
                  value=""
                />
                <label />
              </div>
              <label
                style="padding-right: 16px; padding-left: 16px;"
              >
                Edit mode
              </label>
            </div>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            autocorrect="on"
            data-gramm="false"
            data-key="0"
            data-slate-editor="true"
            spellcheck="true"
            style="outline: none; white-space: pre-wrap; word-wrap: break-word; width: 100%; height: 100%; flex-grow: 1;"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreateLetterOfCredit matches snapshot when there is a bad slate document 1`] = `
<DocumentFragment>
  <div
    style="padding: 16px; margin: 0px; max-height: 78px;"
  >
    <div
      style="font-size: 1.28571429rem; padding-bottom: 8px;"
    >
      Standby Letter of Credit Application
    </div>
    <div
      style="color: rgb(93, 118, 143);"
    >
      Template: FakeTemplate
    </div>
  </div>
  .c7 {
  width: 100%;
  padding: 8px;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
}

.c8 {
  margin-left: auto;
}

.c9 {
  margin-top: 2px;
  padding: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #c0cfde;
  background-color: white;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
  height: 100%;
  width: 100%;
}

.c4 {
  font-size: small;
  color: #d45c64;
  margin-top: -1em;
  padding-top: 3px;
  min-height: 22px;
  margin-bottom: 9px;
}

.c0 {
  margin-top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
  width: 100%;
  border-top: 1px solid #c0cfde;
  background-color: #f2f5f8;
}

.c1 {
  width: 100%;
  background-color: #f2f5f8;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
}

.c2 {
  padding: 16px;
  overflow: auto;
  height: 100%;
  background-color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #c0cfde;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  background-color: #f2f5f8;
}

.c3.c3.c3.c3 {
  border: 0;
  padding: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3.c3.c3.c3:hover,
.c3.c3.c3.c3:active,
.c3.c3.c3.c3:visited,
.c3.c3.c3.c3:focus {
  box-shadow: none !important;
}

@media (min-width:68.75em) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    height: 100%;
    overflow: none;
  }
}

@media (min-width:68.75em) {
  .c1 {
    padding: 16px 0 16px 16px;
    -webkit-scroll-behavior: smooth;
    -moz-scroll-behavior: smooth;
    -ms-scroll-behavior: smooth;
    scroll-behavior: smooth;
    height: calc(100vh - 80px);
    margin: 0;
    box-shadow: none;
    width: 400px;
    max-width: 400px;
    min-width: 400px;
  }
}

@media (min-width:68.75em) {
  .c5 {
    max-width: 990px;
    margin-left: auto;
    margin-right: auto;
    padding: 16px;
    height: calc(100vh - 80px);
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          style="display: flex; justify-content: space-between; padding-top: 0px; padding-bottom: 16px;"
        >
          <div
            class="ui header"
          >
            Apply for SBLC
          </div>
          <a
            class="c3"
            href="/trades/123?hideDeleteButton=true&hideApplyButtons=true"
            target="_blank"
          >
            View trade details
          </a>
        </div>
        <form
          class="ui form"
          id="create-standby-letter-of-credit"
          style="display: flex; flex-direction: column; flex-grow: 1;"
        >
          <div
            class="field"
          >
            <label
              class="inputLabel"
            >
              Issuing bank
            </label>
            <div
              aria-expanded="false"
              class="ui compact search selection dropdown field error dropdown-input"
              data-test-id="issuingBankId"
              name="issuingBank.staticId"
              role="combobox"
              style="width: 100%;"
            >
              <input
                aria-autocomplete="list"
                autocomplete="off"
                class="search"
                id="field_issuingBank.staticId"
                tabindex="1"
                type="text"
                value=""
              />
              <div
                aria-live="polite"
                class="text"
                role="alert"
              />
              <i
                aria-hidden="true"
                class="dropdown icon"
              />
              <div
                class="menu transition"
                role="listbox"
              >
                <div
                  aria-checked="false"
                  aria-selected="true"
                  class="selected item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Bank 1
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Bank 2
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Bank 3
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c4"
          >
            Field missing in template
          </div>
          <div
            class="field"
          >
            <label
              class="inputLabel"
            >
              Advising bank
            </label>
            <div
              aria-disabled="true"
              aria-expanded="false"
              class="ui disabled compact selection dropdown field error dropdown-input"
              name="beneficiaryBank.staticId"
              role="listbox"
              style="width: 100%;"
              tabindex="-1"
            >
              <div
                aria-live="polite"
                class="default text"
                role="alert"
              >
                No advising bank
              </div>
              <i
                aria-hidden="true"
                class="dropdown icon"
              />
              <div
                class="menu transition"
              >
                <div
                  aria-checked="false"
                  aria-selected="true"
                  class="selected item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    No advising bank
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c4"
          >
            Field missing in template
          </div>
          <div
            class="field"
          >
            <label>
              Opening amount / Currency
            </label>
            <div
              class="ui right labeled input field error"
              data-test-id="amount"
            >
              <input
                id="field_amount"
                name="amount"
                tabindex="3"
                type="text"
                value="100.00"
              />
              <div
                aria-expanded="false"
                class="ui dropdown label"
                data-test-id="currency"
                name="currency"
                role="listbox"
                style="border: 1px solid rgb(226, 226, 226);"
                tabindex="0"
              >
                <div
                  aria-live="polite"
                  class="text"
                  role="alert"
                >
                  EUR
                </div>
                <i
                  aria-hidden="true"
                  class="dropdown icon"
                />
                <div
                  class="menu transition"
                >
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      AED
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      CHF
                    </span>
                  </div>
                  <div
                    aria-checked="true"
                    aria-selected="true"
                    class="active selected item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      EUR
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      GBP
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      JPY
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      USD
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c4"
          >
            Field missing in template
          </div>
          <div
            class="field"
          >
            <label>
              Expiry date
            </label>
            <div
              class="field"
              style="display: inherit; justify-content: unset; align-items: center;"
            >
              <label
                class="inputLabel"
              />
              <div
                class="ui input field error"
                data-test-id="expiryDate"
                style="width: 100%;"
              >
                <input
                  id="field_expiryDate"
                  min="2018-11-13"
                  name="expiryDate"
                  tabindex="4"
                  type="date"
                  value="Choose a valid expiry date"
                />
              </div>
            </div>
          </div>
          <div
            class="c4"
          >
            Field missing in template
          </div>
          <button
            class="ui primary disabled button"
            data-test-id="submit-letter-of-credit-application"
            disabled=""
            role="button"
            style="width: 100%; margin-top: auto;"
            tabindex="-1"
            type="submit"
          >
            Submit Application
          </button>
        </form>
      </div>
    </div>
    <div
      class="c5"
      height="80px"
    >
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          <div
            style="padding-left: 16px; color: rgb(212, 92, 100);"
          >
            <i
              aria-hidden="true"
              class="red warning sign icon"
            />
            <span
              style="padding-left: 16px;"
            >
              The template is missing 8 mandatory fields. 
              <span
                data-test-id="resolve-missing-fields"
                style="color: rgb(212, 92, 100); text-decoration: underline; cursor: pointer;"
              >
                Resolve
              </span>
            </span>
          </div>
          <div
            class="c8"
          >
            <div
              style="display: flex; align-items: center;"
            >
              <div
                class="ui fitted toggle checkbox"
                data-test-id="button-mode"
              >
                <input
                  class="hidden"
                  readonly=""
                  tabindex="0"
                  type="checkbox"
                  value=""
                />
                <label />
              </div>
              <label
                style="padding-right: 16px; padding-left: 16px;"
              >
                Edit mode
              </label>
            </div>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            autocorrect="on"
            data-gramm="false"
            data-key="6"
            data-slate-editor="true"
            spellcheck="true"
            style="outline: none; white-space: pre-wrap; word-wrap: break-word; width: 100%; height: 100%; flex-grow: 1;"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreateLetterOfCredit submission calls onSubmit when form fields are filled and template is valid 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -70,23 +70,25 @@
                />
                <div
                  aria-live=\\"polite\\"
                  class=\\"text\\"
                  role=\\"alert\\"
-               />
+               >
+                 Bank 1
+               </div>
                <i
                  aria-hidden=\\"true\\"
                  class=\\"dropdown icon\\"
                />
                <div
                  class=\\"menu transition\\"
                  role=\\"listbox\\"
                >
                  <div
-                   aria-checked=\\"false\\"
+                   aria-checked=\\"true\\"
                    aria-selected=\\"true\\"
-                   class=\\"selected item\\"
+                   class=\\"active selected item\\"
                    role=\\"option\\"
                    style=\\"pointer-events: all;\\"
                  >
                    <span
                      class=\\"text\\"
@@ -191,11 +193,11 @@
                <input
                  id=\\"field_amount\\"
                  name=\\"amount\\"
                  tabindex=\\"3\\"
                  type=\\"text\\"
-                 value=\\"100.00\\"
+                 value=\\"1,000.00\\"
                />
                <div
                  aria-expanded=\\"false\\"
                  class=\\"ui dropdown label\\"
                  data-test-id=\\"currency\\"
@@ -207,11 +209,11 @@
                  <div
                    aria-live=\\"polite\\"
                    class=\\"text\\"
                    role=\\"alert\\"
                  >
-                   EUR
+                   USD
                  </div>
                  <i
                    aria-hidden=\\"true\\"
                    class=\\"dropdown icon\\"
                  />
@@ -243,13 +245,13 @@
                      >
                        CHF
                      </span>
                    </div>
                    <div
-                     aria-checked=\\"true\\"
-                     aria-selected=\\"true\\"
-                     class=\\"active selected item\\"
+                     aria-checked=\\"false\\"
+                     aria-selected=\\"false\\"
+                     class=\\"item\\"
                      role=\\"option\\"
                      style=\\"pointer-events: all;\\"
                    >
                      <span
                        class=\\"text\\"
@@ -282,13 +284,13 @@
                      >
                        JPY
                      </span>
                    </div>
                    <div
-                     aria-checked=\\"false\\"
-                     aria-selected=\\"false\\"
-                     class=\\"item\\"
+                     aria-checked=\\"true\\"
+                     aria-selected=\\"true\\"
+                     class=\\"active selected item\\"
                      role=\\"option\\"
                      style=\\"pointer-events: all;\\"
                    >
                      <span
                        class=\\"text\\"
@@ -326,26 +328,24 @@
                    id=\\"field_expiryDate\\"
                    min=\\"2018-11-13\\"
                    name=\\"expiryDate\\"
                    tabindex=\\"4\\"
                    type=\\"date\\"
-                   value=\\"Choose a valid expiry date\\"
+                   value=\\"2030-01-01\\"
                  />
                </div>
              </div>
            </div>
            <div
              class=\\"sc-cIShpX gdPDyy\\"
              data-test-id=\\"expiryDate-error\\"
            />
            <button
-             class=\\"ui primary disabled button\\"
+             class=\\"ui primary button\\"
              data-test-id=\\"submit-letter-of-credit-application\\"
-             disabled=\\"\\"
              role=\\"button\\"
              style=\\"width: 100%; margin-top: auto;\\"
-             tabindex=\\"-1\\"
              type=\\"submit\\"
            >
              Submit Application
            </button>
          </form>
@@ -411,11 +411,11 @@
            class=\\"sc-cvbbAY gFTpMg\\"
          >
            <div
              autocorrect=\\"on\\"
              data-gramm=\\"false\\"
-             data-key=\\"12\\"
+             data-key=\\"53\\"
              data-slate-editor=\\"true\\"
              spellcheck=\\"true\\"
              style=\\"outline: none; white-space: pre-wrap; word-wrap: break-word; width: 100%; height: 100%; flex-grow: 1;\\"
            />
          </div>"
`;
